# dotfiles

./: .gitconfig  .secrets.template.sh  .wezterm.lua  .zshrc  README.md  dotfiles-readme.md
.config/cosmic/com.system76.CosmicSettings.Shortcuts/v1/: custom
.config/goose/: config.yaml
.config/nushell/: config.nu
.config/nvim/: README.md  init.lua  lazy-lock.json
.config/nvim/lua/custom/: bicep.lua  commands.lua  javascript.lua  keymaps.lua  lsp.lua  lua.lua  python.lua  rust.lua  utils.lua
.config/nvim/snippets/: python.snippets
.local/share/funstall/: packages.yaml
scripts/setup/: arch.nu  sync.nu  update-system.nu
scripts/setup/arch/: audio.nu  bluetooth.nu  cosmic.nu  delta.nu  discord.nu  dropbox.nu  edge.nu  fonts.nu  fzf.nu  goose.nu  keepass.nu  nas.nu  nfs.nu  nix.nu  ntp.nu  printer.nu  ripgrep.nu  samba.nu  snapshots.nu  sof.nu  swap.nu  wget.nu  yay.nu
scripts/setup/software/: bicep_lsp.nu  dotnet.nu  fnm.nu  markdownlint.nu  neovim.nu  python.nu  python_lsp.nu
scripts/system/: commands.nu  environment.nu
scripts/utils/: linux.nu
scripts/workflows/: code-review.nu  dotfiles.nu  fv.nu  proj.nu  version_control.nu
scripts/workflows/templates/cpp_hip/: .clang-format  .clangd  CMakeLists.txt  flake.nix  template.nu
scripts/workflows/templates/cpp_hip/src/: main.hip  utils.cpp
scripts/workflows/templates/python/: .gitignore  template.nu  tool-settings.toml
scripts/workflows/templates/rust/: Cargo.toml  flake.nix  rust-toolchain.toml  template.nu
scripts/workflows/templates/ts/: .prettierrc  eslint.config.mjs  flake.nix  template.nu  (+1 more)
(+11 files in other folders)
